--- a/src/mives/view/Principal.fxml
+++ b/src/mives/view/Principal.fxml
@@ -226,6 +226,7 @@
                 </Menu>
                 <Menu mnemonicParsing="false" text="Exportar">
                   <items>
+                        <MenuItem mnemonicParsing="false" onAction="#exportarParaHTML" text="HTML" />
                         <Menu mnemonicParsing="false" text="Dispersão de Sentenças">
                           <items>
                             <MenuItem mnemonicParsing="false" text="Geral" />
