--- a/src/mives/view/FXMLParametros.fxml
+++ b/src/mives/view/FXMLParametros.fxml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.text.*?>
-<?import javafx.scene.control.*?>
-<?import java.lang.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<BorderPane minHeight="-Infinity" minWidth="-Infinity" style="-fx-background-color: #3F3F3F;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mives.controller.FXMLParametrosController">
+<BorderPane minHeight="-Infinity" minWidth="-Infinity" style="-fx-background-color: #3F3F3F;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mives.controller.FXMLParametrosController">
    <bottom>
       <HBox alignment="CENTER" prefHeight="39.0" prefWidth="600.0" spacing="50.0" BorderPane.alignment="CENTER">
          <children>
@@ -39,25 +42,40 @@
                <children>
                   <VBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="171.0" prefWidth="150.0">
                      <children>
-                        <Button fx:id="regraPadrao" minHeight="118.0" mnemonicParsing="false" onAction="#carregarRegrasSistema" onMouseEntered="#carregarAjudaLivro" onMouseExited="#carregarAjudaLivroExit" prefHeight="118.0" prefWidth="150.0" stylesheets="@css/buttonutilizarparametro.css" textAlignment="CENTER" />
+                        <Button fx:id="regraPadrao" minHeight="118.0" mnemonicParsing="false" onAction="#carregarRegrasSistema" onMouseEntered="#carregarAjudaLivro" onMouseExited="#carregarAjudaLivroExit" prefHeight="118.0" prefWidth="150.0" stylesheets="@css/buttonutilizarparametro.css" textAlignment="CENTER">
+                           <cursor>
+                              <Cursor fx:constant="DEFAULT" />
+                           </cursor></Button>
                         <Label stylesheets="@css/label_botoes.css" text="UTILIZAR PARÂMETROS DO SISTEMA" textAlignment="CENTER" textFill="WHITE" wrapText="true">
                            <font>
                               <Font name="System Bold" size="12.0" />
                            </font>
+                           <cursor>
+                              <Cursor fx:constant="DEFAULT" />
+                           </cursor>
                         </Label>
                      </children>
                   </VBox>
                   <VBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="150.0" prefWidth="150.0">
                      <children>
-                        <Button fx:id="definirParametros" minHeight="111.0" mnemonicParsing="false" onAction="#abrirJanelaConfiguracao" onMouseEntered="#carregarAjudaDicionario" onMouseExited="#carregarAjudaDicionarioExit" prefHeight="111.0" prefWidth="150.0" stylesheets="@css/buttondefinirparametros.css" textAlignment="CENTER" />
+                        <Button fx:id="definirParametros" minHeight="111.0" mnemonicParsing="false" onAction="#abrirJanelaConfiguracao" onMouseEntered="#carregarAjudaDicionario" onMouseExited="#carregarAjudaDicionarioExit" prefHeight="111.0" prefWidth="150.0" stylesheets="@css/buttondefinirparametros.css" textAlignment="CENTER">
+                           <cursor>
+                              <Cursor fx:constant="DEFAULT" />
+                           </cursor></Button>
                         <Label stylesheets="@css/label_botoes.css" text="DEFINIR PARÂMETROS DE BUSCA" textAlignment="CENTER" textFill="WHITE" wrapText="true">
                            <font>
                               <Font name="System Bold" size="12.0" />
                            </font>
+                           <cursor>
+                              <Cursor fx:constant="DEFAULT" />
+                           </cursor>
                         </Label>
                      </children>
                   </VBox>
                </children>
+               <cursor>
+                  <Cursor fx:constant="DEFAULT" />
+               </cursor>
             </HBox>
             <HBox alignment="CENTER" prefHeight="177.0" prefWidth="600.0" spacing="80.0">
                <children>
