--- a/src/mives/view/css/buttonutilizarparametro.css
+++ b/src/mives/view/css/buttonutilizarparametro.css
@@ -11,10 +11,10 @@
 }
 
 .button:hover {
-  -fx-background-image: url(../imagens/utilizarparametrossysativo.png);
+	-fx-background-image: url(../imagens/utilizarparametrossysativo.png);
+	-fx-cursor: hand;
 }
 
-
 .button:active{
-	 -fx-background-image: url(../imagens/utilizarparametrossysativo.png);
+	-fx-background-image: url(../imagens/utilizarparametrossysativo.png);
 }
