--- a/src/mives/view/FXMLEscolhaIncialDepre.fxml
+++ b/src/mives/view/FXMLEscolhaIncialDepre.fxml
@@ -39,20 +39,20 @@
          <children>
             <HBox alignment="CENTER" prefHeight="185.0" prefWidth="649.0" spacing="80.0" BorderPane.alignment="TOP_CENTER">
                <children>
-                  <VBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="171.0" prefWidth="150.0">
+                  <VBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="170.0" prefWidth="170.0">
                      <children>
-                        <Button fx:id="adicionarLivro" minHeight="103.0" mnemonicParsing="false" onAction="#abrirLivroProcessar" onMouseEntered="#carregarAjudaLivro" onMouseExited="#carregarAjudaLivroExit" prefHeight="103.0" prefWidth="150.0" stylesheets="@css/buttonlivro.css" textAlignment="CENTER" />
-                        <Label prefHeight="66.0" prefWidth="121.0" stylesheets="@css/label_botoes.css" text="ESCOLHER UM LIVRO" textAlignment="CENTER" textFill="WHITE" wrapText="true">
+                        <Button fx:id="adicionarLivro" minHeight="103.0" mnemonicParsing="false" onAction="#abrirLivroProcessar" onMouseEntered="#carregarAjudaLivro" onMouseExited="#carregarAjudaLivroExit" prefHeight="103.0" prefWidth="170.0" stylesheets="@css/buttonlivro.css" textAlignment="CENTER" />
+                        <Label alignment="CENTER" contentDisplay="CENTER" prefWidth="160.0" stylesheets="@css/label_botoes.css" text="ESCOLHER UM LIVRO" textAlignment="CENTER" textFill="WHITE" wrapText="true">
                            <font>
                               <Font name="System Bold" size="12.0" />
                            </font>
                         </Label>
                      </children>
                   </VBox>
-                  <VBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="190.0" prefWidth="175.0">
+                  <VBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="170.0" prefWidth="170.0">
                      <children>
-                        <Button fx:id="analisarProcessado" minHeight="103.0" mnemonicParsing="false" onAction="#abrirArquivoProcessar" onMouseEntered="#carregarAjudaArqAnalise" onMouseExited="#carregarAjudaArqAnaliseExit" prefHeight="132.0" prefWidth="164.0" stylesheets="@css/botaoabrirprocessado.css" textAlignment="RIGHT" />
-                        <Label prefHeight="61.0" prefWidth="150.0" stylesheets="@css/label_botoes.css" text="ABRIR UM ARQUIVO PROCESSADO PARA ANÁLISE" textAlignment="CENTER" textFill="WHITE" wrapText="true">
+                        <Button fx:id="analisarProcessado" minHeight="110.0" mnemonicParsing="false" onAction="#abrirArquivoProcessar" onMouseEntered="#carregarAjudaArqAnalise" onMouseExited="#carregarAjudaArqAnaliseExit" prefHeight="110.0" prefWidth="170.0" stylesheets="@css/botaoabrirprocessado.css" textAlignment="RIGHT" />
+                        <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="49.0" prefWidth="160.0" stylesheets="@css/label_botoes.css" text="ABRIR UM ARQUIVO PROCESSADO PARA ANÁLISE" textAlignment="CENTER" textFill="WHITE" wrapText="true">
                            <font>
                               <Font name="System Bold" size="12.0" />
                            </font>
@@ -63,20 +63,20 @@
             </HBox>
             <HBox alignment="CENTER" prefHeight="177.0" prefWidth="600.0" spacing="80.0">
                <children>
-                  <VBox prefHeight="177.0" prefWidth="158.0">
+                  <VBox alignment="TOP_RIGHT" prefHeight="177.0" prefWidth="158.0" HBox.hgrow="ALWAYS">
                      <children>
-                        <Button fx:id="ajudaNovoLivro" mnemonicParsing="false" prefHeight="148.0" prefWidth="157.0" style="-fx-background-color: #3F3F3F;" />
+                        <Button fx:id="ajudaNovoLivro" alignment="CENTER" mnemonicParsing="false" opacity="0.0" prefHeight="100.0" prefWidth="100.0" style="-fx-background-color: #3F3F3F;" text="Escolha um livro do seu computador para ser processado" textAlignment="CENTER" textFill="WHITE" wrapText="true" />
                      </children>
                   </VBox>
                   <VBox prefHeight="177.0" prefWidth="154.0" style="-fx-padding: 1em;">
                      <children>
-                        <Label alignment="TOP_CENTER" contentDisplay="CENTER" prefHeight="17.0" prefWidth="153.0" text="Arquivo Escolhido:" textFill="WHITE" />
-                        <Label fx:id="nomeArquivo" prefHeight="17.0" prefWidth="148.0" textFill="WHITE" />
+                        <Label alignment="CENTER" contentDisplay="CENTER" stylesheets="@css/label_botoes.css" text="ARQUIVO ESCOLHIDO" textAlignment="CENTER" textFill="WHITE" wrapText="true" />
+                        <Label fx:id="nomeArquivo" stylesheets="@css/label_botoes.css" textAlignment="CENTER" textFill="WHITE" wrapText="true" />
                      </children>
                   </VBox>
-                  <VBox prefHeight="177.0" prefWidth="144.0">
+                  <VBox prefHeight="177.0" prefWidth="144.0" HBox.hgrow="ALWAYS">
                      <children>
-                        <Button fx:id="ajudaNovoAnalise" alignment="CENTER" mnemonicParsing="false" prefHeight="148.0" prefWidth="145.0" style="-fx-background-color: #3F3F3F;" />
+                        <Button fx:id="ajudaNovoAnalise" alignment="CENTER" mnemonicParsing="false" opacity="0.0" prefHeight="100.0" prefWidth="100.0" style="-fx-background-color: #3F3F3F;" text="Selecione um arquivo de um livro já processado pelo MIVES" textAlignment="CENTER" textFill="WHITE" wrapText="true" />
                      </children>
                   </VBox>
                </children>
