--- a/src/mives/view/FXMLEscolhaIncialDepre.fxml
+++ b/src/mives/view/FXMLEscolhaIncialDepre.fxml
@@ -51,8 +51,8 @@
                   </VBox>
                   <VBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="170.0" prefWidth="170.0">
                      <children>
-                        <Button fx:id="analisarProcessado" minHeight="110.0" mnemonicParsing="false" onAction="#abrirArquivoProcessar" onMouseEntered="#carregarAjudaArqAnalise" onMouseExited="#carregarAjudaArqAnaliseExit" prefHeight="110.0" prefWidth="170.0" stylesheets="@css/botaoabrirprocessado.css" textAlignment="RIGHT" />
-                        <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="49.0" prefWidth="160.0" stylesheets="@css/label_botoes.css" text="ABRIR UM ARQUIVO PROCESSADO PARA ANÁLISE" textAlignment="CENTER" textFill="WHITE" wrapText="true">
+                        <Button fx:id="analisarProcessado" minHeight="123.0" mnemonicParsing="false" onAction="#abrirArquivoProcessar" onMouseEntered="#carregarAjudaArqAnalise" onMouseExited="#carregarAjudaArqAnaliseExit" prefHeight="123.0" prefWidth="170.0" stylesheets="@css/botaoabrirprocessado.css" textAlignment="RIGHT" />
+                        <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="49.0" prefWidth="160.0" stylesheets="@css/label_botoes.css" text="ABRIR UM ARQUIVO PROCESSADO" textAlignment="CENTER" textFill="WHITE" wrapText="true">
                            <font>
                               <Font name="System Bold" size="12.0" />
                            </font>
