--- a/src/mives/view/FXMLEscolhaIncialDepre.fxml
+++ b/src/mives/view/FXMLEscolhaIncialDepre.fxml
@@ -42,7 +42,7 @@
                   <VBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="170.0" prefWidth="170.0">
                      <children>
                         <Button fx:id="adicionarLivro" minHeight="103.0" mnemonicParsing="false" onAction="#abrirLivroProcessar" onMouseEntered="#carregarAjudaLivro" onMouseExited="#carregarAjudaLivroExit" prefHeight="103.0" prefWidth="170.0" stylesheets="@css/buttonlivro.css" textAlignment="CENTER" />
-                        <Label alignment="CENTER" contentDisplay="CENTER" prefWidth="160.0" stylesheets="@css/label_botoes.css" text="ESCOLHER UM LIVRO" textAlignment="CENTER" textFill="WHITE" wrapText="true">
+                        <Label alignment="CENTER" contentDisplay="CENTER" prefWidth="160.0" stylesheets="@css/label_botoes.css" text="Escolher um livro" textAlignment="CENTER" textFill="WHITE" wrapText="true">
                            <font>
                               <Font name="System Bold" size="12.0" />
                            </font>
@@ -51,8 +51,8 @@
                   </VBox>
                   <VBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="170.0" prefWidth="170.0">
                      <children>
-                        <Button fx:id="analisarProcessado" minHeight="123.0" mnemonicParsing="false" onAction="#abrirArquivoProcessar" onMouseEntered="#carregarAjudaArqAnalise" onMouseExited="#carregarAjudaArqAnaliseExit" prefHeight="123.0" prefWidth="170.0" stylesheets="@css/botaoabrirprocessado.css" textAlignment="RIGHT" />
-                        <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="49.0" prefWidth="160.0" stylesheets="@css/label_botoes.css" text="ABRIR UM ARQUIVO PROCESSADO" textAlignment="CENTER" textFill="WHITE" wrapText="true">
+                        <Button fx:id="analisarProcessado" minHeight="95.0" mnemonicParsing="false" onAction="#abrirArquivoProcessar" onMouseEntered="#carregarAjudaArqAnalise" onMouseExited="#carregarAjudaArqAnaliseExit" prefHeight="103.0" prefWidth="170.0" stylesheets="@css/botaoabrirprocessado.css" textAlignment="RIGHT" />
+                        <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="103.0" prefWidth="170.0" stylesheets="@css/label_botoes.css" text="Abrir um arquivo processado" textAlignment="CENTER" textFill="WHITE" wrapText="true">
                            <font>
                               <Font name="System Bold" size="12.0" />
                            </font>
@@ -70,8 +70,8 @@
                   </VBox>
                   <VBox prefHeight="177.0" prefWidth="154.0" style="-fx-padding: 1em;">
                      <children>
-                        <Label alignment="CENTER" contentDisplay="CENTER" stylesheets="@css/label_botoes.css" text="ARQUIVO ESCOLHIDO" textAlignment="CENTER" textFill="WHITE" wrapText="true" />
-                        <Label fx:id="nomeArquivo" stylesheets="@css/label_botoes.css" textAlignment="CENTER" textFill="WHITE" wrapText="true" />
+                        <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="17.0" prefWidth="142.0" stylesheets="@css/label_botoes.css" text="Arquivo escolhido" textAlignment="CENTER" textFill="WHITE" wrapText="true" />
+                        <Label fx:id="nomeArquivo" textAlignment="CENTER" textFill="WHITE" wrapText="true" />
                      </children>
                   </VBox>
                   <VBox prefHeight="177.0" prefWidth="144.0" HBox.hgrow="ALWAYS">
