--- a/src/mives/view/FXMLEscolhaIncialDepre.fxml
+++ b/src/mives/view/FXMLEscolhaIncialDepre.fxml
@@ -68,7 +68,7 @@
                         <Button fx:id="ajudaNovoLivro" alignment="CENTER" mnemonicParsing="false" opacity="0.0" prefHeight="100.0" prefWidth="100.0" style="-fx-background-color: #3F3F3F;" text="Escolha um livro do seu computador para ser processado" textAlignment="CENTER" textFill="WHITE" wrapText="true" />
                      </children>
                   </VBox>
-                  <VBox prefHeight="177.0" prefWidth="154.0" style="-fx-padding: 1em;">
+                  <VBox alignment="TOP_CENTER" prefHeight="177.0" prefWidth="154.0" style="-fx-padding: 1em;">
                      <children>
                         <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="17.0" prefWidth="142.0" stylesheets="@css/label_botoes.css" text="Arquivo escolhido" textAlignment="CENTER" textFill="WHITE" wrapText="true" />
                         <Label fx:id="nomeArquivo" textAlignment="CENTER" textFill="WHITE" wrapText="true" />
