--- a/src/mives/view/FXMLResumoController.fxml
+++ b/src/mives/view/FXMLResumoController.fxml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.net.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.text.*?>
-<?import javafx.scene.control.*?>
-<?import java.lang.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="268.0" prefWidth="600.0" style="-fx-background-color: #3F3F3F;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mives.controller.FXMLResumoController">
+<BorderPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="268.0" prefWidth="600.0" style="-fx-background-color: #3F3F3F;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mives.controller.FXMLResumoController">
    <bottom>
       <HBox alignment="CENTER" prefHeight="39.0" prefWidth="600.0" spacing="50.0" BorderPane.alignment="CENTER">
          <children>
@@ -42,7 +42,7 @@
                         <Label fx:id="labelMetros" prefHeight="17.0" prefWidth="337.0" text="Metros a serem buscados: " textFill="#d8d8d8" />
                         <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
                            <children>
-                              <Button minHeight="96.0" mnemonicParsing="false" prefHeight="96.0" prefWidth="146.0" stylesheets="@css/btnmensagemfinal.css" textAlignment="CENTER" />
+                              <Button alignment="CENTER" minHeight="96.0" mnemonicParsing="false" prefHeight="85.0" prefWidth="146.0" style="-fx-border-color: white; -fx-border-radius: 10px;" stylesheets="@css/btnmensagemfinal.css" text="Clique em Avançar para processar o livro" textAlignment="CENTER" textFill="WHITE" wrapText="true" />
                            </children>
                         </HBox>
                      </children>
