--- a/src/mives/view/css/mensagemcarregarlivro.css
+++ b/src/mives/view/css/mensagemcarregarlivro.css
@@ -2,7 +2,7 @@
 
     -fx-min-height: 148px;
     -fx-min-width: 98px;
-    -fx-background-image: url(../imagens/mensageminicial.png);
+    /*-fx-background-image: url(../imagens/mensageminicial.png);*/
     -fx-background-size: 148px 98px;
     -fx-background-repeat: no-repeat;
     -fx-background-position: center 8px;
