--- a/src/mives/view/FXMLCarregarLivro.fxml
+++ b/src/mives/view/FXMLCarregarLivro.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="268.0" prefWidth="600.0" style="-fx-background-color: #3F3F3F;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mives.controller.FXMLCarregarLivroController">
+<BorderPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="268.0" prefWidth="600.0" style="-fx-background-color: #3F3F3F;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mives.controller.FXMLCarregarLivroController">
    <bottom>
       <HBox alignment="CENTER" prefHeight="39.0" prefWidth="600.0" spacing="50.0" BorderPane.alignment="CENTER">
          <children>
@@ -25,7 +25,7 @@
    <top>
       <HBox alignment="CENTER_LEFT" prefHeight="42.0" prefWidth="600.0" BorderPane.alignment="CENTER">
          <children>
-            <Label stylesheets="@css/label_wizard.css" text="   CARREGAMENTO CONCLUÍDO" textFill="#d8d8d8">
+            <Label stylesheets="@css/label_wizard.css" text="   CARREGAMENTO DO LIVRO" textFill="#d8d8d8">
                <font>
                   <Font name="System Bold" size="20.0" />
                </font>
@@ -40,7 +40,7 @@
                   <HBox alignment="CENTER_LEFT" prefHeight="69.0" prefWidth="234.0">
                      <children>
                         <Label minHeight="88.0" prefHeight="82.0" prefWidth="79.0" stylesheets="@css/btncarregarlivro.css" />
-                        <Label text="Livro Carregado" textFill="#d8d8d8">
+                        <Label text="Livro Carregando" textFill="#d8d8d8">
                            <font>
                               <Font name="Verdana Bold" size="14.0" />
                            </font>
