--- a/src/mives/view/FXMLParametros.fxml
+++ b/src/mives/view/FXMLParametros.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane minHeight="-Infinity" minWidth="-Infinity" style="-fx-background-color: #3F3F3F;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mives.controller.FXMLParametrosController">
+<BorderPane minHeight="-Infinity" minWidth="-Infinity" style="-fx-background-color: #3F3F3F;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mives.controller.FXMLParametrosController">
    <bottom>
       <HBox alignment="CENTER" prefHeight="39.0" prefWidth="600.0" spacing="50.0" BorderPane.alignment="CENTER">
          <children>
@@ -86,7 +86,7 @@
                   </VBox>
                   <VBox alignment="TOP_CENTER" prefHeight="177.0" prefWidth="154.0" style="-fx-padding: 1em;">
                      <children>
-                        <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="20.0" prefWidth="166.0" stylesheets="@css/label_botoes.css" text="Escolha:" textAlignment="CENTER" textFill="WHITE" wrapText="true" />
+                        <Label fx:id="escolha" alignment="CENTER" contentDisplay="CENTER" prefHeight="20.0" prefWidth="166.0" stylesheets="@css/label_botoes.css" text="Escolha:" textAlignment="CENTER" textFill="WHITE" visible="false" wrapText="true" />
                         <Label fx:id="labelEscolha" textAlignment="CENTER" textFill="WHITE" wrapText="true" />
                         <Button fx:id="ajudaDicionario" mnemonicParsing="false" prefHeight="148.0" prefWidth="153.0" style="-fx-background-color: #3F3F3F;" />
                      </children>
