--- a/src/mives/view/FXMLProcessandoLivro.fxml
+++ b/src/mives/view/FXMLProcessandoLivro.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="320.0" prefWidth="600.0" style="-fx-background-color: #3F3F3F;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mives.controller.FXMLProcessandoLivroController">
+<BorderPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="320.0" prefWidth="600.0" style="-fx-background-color: #3F3F3F;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mives.controller.FXMLProcessandoLivroController">
    <bottom>
       <HBox alignment="CENTER" prefHeight="39.0" prefWidth="600.0" spacing="50.0" BorderPane.alignment="CENTER">
          <children>
@@ -29,7 +29,7 @@
          <children>
             <Button mnemonicParsing="false" prefHeight="102.0" prefWidth="137.0" stylesheets="@css/buttonLogo.css" />
             <ProgressBar fx:id="barraProcessarLivro" maxHeight="25.0" minHeight="7.0" prefHeight="25.0" prefWidth="417.0" progress="0.0" style="-fx-max-height: 10;" stylesheets="@css/progressbar.css" />
-            <Label stylesheets="@css/label_botoes.css" text="MINERANDO TEXTO...AGUARDE" textFill="#8cc5f4">
+            <Label fx:id="label" stylesheets="@css/label_botoes.css" text="MINERANDO TEXTO...AGUARDE" textFill="#8cc5f4">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font>
