--- a/src/mives/view/css/accordion_estilo.css
+++ b/src/mives/view/css/accordion_estilo.css
@@ -38,6 +38,7 @@
 	/*-fx-background-insets: 0, 1, 2;*/
 	-fx-background-radius: 5 5 0 0, 4 4 0 0, 3 3 0 0;
 	-fx-background-color: #3F3F3F;
+	-fx-font-size: 14px;
 	-fx-border-radius: 20;
 	-fx-border-color: #D8D8D8;
 	-fx-border-width: 2;
